show synonyms which have been loaded

--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
 <body>
     <button onclick="getSynonyms()">Get Sysnonyms</button>
     
+    <div id="container">
+
+    </div>
 </body>
 </html>
