input textfield + terms

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <title>Openthesaurus API Tutorial</title>
 </head>
 <body>
-    <button onclick="getSynonyms()">Get Sysnonyms</button>
+    <input id="search-query" type="text">
+    <button onclick="getSynonyms()">Get Synonyms</button>
     
     <div id="container">
 
